<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.undead.nosavvy.labcalificado1.PedidoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="16dp"
        >
    <TextView
        android:textStyle="bold"


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/tipo_de_pizza"
        android:textSize="12sp"
        android:textColor="@color/greyText"/>
        <Spinner
            android:id="@+id/pizza_tipos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/android_layout_arrays"
            android:padding="5dp"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tipo_de_masa"
            android:textSize="12sp"
            android:textColor="@color/greyText"/>
<RadioGroup
    android:id="@+id/radioButton1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   >
        <RadioButton
            android:id="@+id/masa_gruesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rbCheck"
            android:text="@string/masa_gruesa" />
        <RadioButton
            android:id="@+id/masa_delgada"
            android:layout_width="wrap_content"
            android:onClick="rbCheck"
            android:layout_height="wrap_content"
            android:text="@string/masa_delgada"/>
        <RadioButton
            android:id="@+id/masa_artesanal"
            android:layout_width="wrap_content"
            android:onClick="rbCheck"
            android:layout_height="wrap_content"
            android:text="@string/masa_artesanal"/>
</RadioGroup>
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/complementos"
            android:textSize="12sp"
            android:textColor="@color/greyText"/>
        <CheckBox
            android:id="@+id/check_uno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheck"
            android:text="@string/extra_queso_mozarella"/>
        <CheckBox
            android:id="@+id/check_dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheck"
            android:text="@string/extra_jam_n"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/direcci_n_de_env_o"
            android:textSize="12sp"
            android:textColor="@color/greyText"/>
        <EditText
            android:id="@+id/direccion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <Button

        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@color/txtButton"
        android:textStyle="bold"
        android:textSize="20dp"/>


</android.support.constraint.ConstraintLayout>
