<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.undead.nosavvy.labcalificado1.OfertaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.0">
        <VideoView
            android:id="@+id/video"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"/>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/oferta_pizza"/>
            <TextView
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oferta_title"
                android:textStyle="bold"/>
                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oferta_description"/>
                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oferta_price"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/splashText"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <Button
        android:id="@+id/deliver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btntxt_delivery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@color/txtButton"
        android:textStyle="bold"
        android:textSize="20sp"/>
</android.support.constraint.ConstraintLayout>
